adding all new files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="navbar">
+            <img src="./FullLogo.png" alt="fulllogo">
 
+            <ul class="nav">
+                <li><a href="#">About us</a></li>
+                <li><a href="#">career</a></li>
+                <li><a href="#">Department</a></li>
+            </ul>
+        </div>
+    </header>
+    <br>
+    <div class="centeredlogo">
+        <img src="./logo.png" alt="centeredlogo" class="centered_logo">
+    </div>
+    <br>
+    <section>
+    <div class="firstheading">
+        <p>Making the healthcare experience more human</p>
+    </div>
+    <br>
+    <div class="writeup">
+<div class="writeup1">
+<p>We want patients to find the perfect doctor and book an appointment in the most easy way. The patient journey should be enjoyable, 
+    and that's why we are always next to them: to help them find the best possible care. Anytime, anywhere.</p>
+</div>
+<div class="writeup1">
+    <p>We also help doctors to better manage their practice and build their online reputation. With our integrated end-to-end solution, doctors are able not 
+        only to improve their online presence, but also to devote their time to what really matters: their patients.</p>
+    </div>
+    </div>
+</section>
 </body>
 </html>
