adding all files

--- a/index.html
+++ b/index.html
@@ -39,5 +39,36 @@
     </div>
     </div>
 </section>
+<br>
+<section>
+    
+    <div class="container">
+        <div class="inner">
+            <img src="./team-5707.png" alt="team">
+            <h3>for patient</h3>
+            <p>
+                Find a doctor, book a visit and solve any health-related doubt
+            </p>
+            <label for=""></label>
+
+        </div>
+    <div class="inner">
+            <img src="./image icon doctor.png" alt="team">
+            <h3>for Doctor</h3>
+            <p>
+                Save time managing visits and cut no-shows by half
+            </p>
+
+        </div>
+        <div class="inner">
+            <img src="./hospital-1066.png" alt="team">
+            <h3>for Clinic</h3>
+            <p>
+                Deliver an exceptional patient experience in your clinic
+            </p>
+
+        </div>
+    </div>
+</section>
 </body>
 </html>
