--- a/index.html
+++ b/index.html
@@ -168,10 +168,27 @@ with local &nbsp; culture
     <img src="./Znamylekar.jpeg" alt="pic8">
 </div>
 </div>
+<br>
 <section>
-    
+<div class="close">
+<div class="close1">
+    <h5>The world's biggest <br>
+        healthcare platform</h5>
+        <p>We work from 9 offices all over the world, bringing Docplanner <br>
+            Group to life in 13 countries.</p>
+            <div class="logoo">
+                <img src="./logocropped.png" alt="big logo">
+            </div>
+</div>
+</div>
 </section>
+<section>
+    <div class="gridcontainer">
+        <div class="gridcontainer1">
 
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
