adding all country

--- a/index.html
+++ b/index.html
@@ -184,11 +184,118 @@ with local &nbsp; culture
 </section>
 <section>
     <div class="gridcontainer">
+        <div class="white1">
         <div class="gridcontainer1">
+            <img src="./flag.png" alt="flag">
+            <h3>Leader in 13 countries</h3>
+            <p>Poland, Brazil, Mexico, Spain, Italy, Germany,
+            Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile</p>
+        </div>
+    </div>
+    <div class="white1">
+        <div class="gridcontainer1">
+            <img src="./visits.png" alt="visit">
+            <h3>15,000,000 appointments</h3>
+            <p>booked last month</p>
+        </div>
+    </div>
+    <div class="white1">
+        <div class="gridcontainer1">
+            <img src="./patients.png" alt="patients">
+            <h3>90,000,000 patients</h3>
+            <p>visit our websites each month</p>
+        </div>
+    </div>
+    <div class="white1">
+        <div class="gridcontainer1">
+            <img src="./doctors.png" alt="doctor">
+            <h3>210,000 active doctors</h3>
+            <p>trust our solutions</p>
+        </div>
+    </div>
+    </div>
+</section>
+<section>
+    <div class="heading">
+        <h3>
+        Improve the lives of millions.
+           <br>Change yours forever.
+        </h3>
+        
+        <p>
+            More than 2800 team mates share our same vision, goals and passion.
+            With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Rio, Bologna,
+            Mexico City and Curitiba, our search for great talent never stops.
+        </p>
 
+    </div>
+</section>
+<section>
+    <div class="country">
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
+        </div>
+        <div class="each">
+            <img src="" alt="">
+            <p></p>
+            <button type="button">
+                <b>SEE OPENING</b>
+            </button>
         </div>
     </div>
 </section>
-
 </body>
 </html>
