adding all files

--- a/index.html
+++ b/index.html
@@ -230,72 +230,93 @@ with local &nbsp; culture
 
     </div>
 </section>
+<br>
 <section>
     <div class="country">
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./warsaw.png" alt="warsaw">
+            <p>warsaw</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./barcelona.png" alt="barcelona">
+            <p>Barcelona</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./munich.png" alt="munich">
+            <p>Munich</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./istanbul.png" alt="instanbul">
+            <p>Instanbul</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./bologna.png" alt="bologna">
+            <p>Bologna</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./curitiba.png" alt="curitiba">
+            <p>Curitiba</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./mexico-city.png" alt="mexico city">
+            <p>mexico-city</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./rio-janeiro.png" alt="rio-janeiro">
+            <p>Rio-janeiro</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
         <div class="each">
-            <img src="" alt="">
-            <p></p>
+            <img src="./rome.png" alt="rome">
+            <p>Rome</p>
             <button type="button">
                 <b>SEE OPENING</b>
             </button>
         </div>
     </div>
 </section>
+<section>
+    <div class="lastheading">
+        <h3>Sounds interesting? Join us now!</h3>
+        <button type="button"><b>SEE ALL CURRENT OPENNINGS</b></button>
+    </div>
+</section>
+<section>
+    <div class="list">
+        <p>
+            We are leaders in 13 countries: <span> Poland , Turky , Spain , Italy , Germany , Czech Republic , Portugal 
+            , Mexico , Colombia , Brazil , Argentina , Peru and Chile </span> 
+        </p>
+    </div>
+</section>
+<footer>
+    <div class="footer">
+        <p>This site uses cookies to deliver services in accordance with this Privacy Policy. You can specify the conditions for storing or accessing cookies on your browser.
+            <br>www.docplanner.com © 2023</p>
+    </div>
+</footer>
 </body>
 </html>
